sidebar style alignment fix

--- a/reactflowMain/src/torusComponents/switch.css
+++ b/reactflowMain/src/torusComponents/switch.css
@@ -1,6 +1,7 @@
 .switch {
   display: inline-block;
   width: 60px !important;
+  margin-top: 4px !important;
 }
 
 .switch input {
